# NALU

./: .coveragerc  .gitignore  LICENSE-MIT  MANIFEST.in  NALU.py  NeuralAccumulator.py  README.md  pyproject.toml  requirements.txt  setup.py  tox.ini
nalu/: __init__.py
nalu/core/: __init__.py  nac_cell.py  nalu_cell.py
nalu/layers/: __init__.py  nalu_layer.py
